# cnu_announcement_discordBot

./: .gitignore  0809.py  LICENSE  README.md  base.env  cnu_discord.py  pyproject.toml  readme.md  requirements.txt  run.py
crawling for discord bot project/: crawling test.ipynb  crawling.py  info.py  posts_data.json  several page crawling.py  test.ipynb
src/cnudicobot/: __init__.py  main.py
src/cnudicobot/adapter/controller/: noticeboard.py
src/cnudicobot/adapter/presenter/: 0809.py  formatter.py  transmitter.py  포스트 생성.py
src/cnudicobot/domain/: entity.py  usecase.py
src/cnudicobot/driver/database/: base.py  manager.py  scheme.py
src/cnudicobot/driver/env/: base.env  settings.py
src/cnudicobot/driver/network/cnu/: noticeboard.py  webcrawler.py  webparser.py
src/cnudicobot/driver/network/discord/: api.py  포스트 생성.py
