[tool.poetry]
name = "daiv"
version = "0.1.0"
description = ""
authors = ["jungbug <xbox1111@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
fastapi = "^0.109.2"
bs4 = "^0.0.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
